# Intro-to-Game-Programming

./: .gitignore  README.md  hello  hello.cpp
Components/: BackgroundComponent.h  CMakeLists.txt  Engine.cpp  Engine.h  FollowComponent.h  HealthComponent.h  MovementComponent.h  ProjectileComponent.h  SpriteComponent.h  main.cpp
project/: build.bat
project/assets/xml/: objects.xml
project/src/: Component.h  DebugConfig.h  GameObject.h  Input.h  build.bat  main.cpp
project/src/components/: Behavior1Component.h  Behavior2Component.h  BodyComponent.h  ControllerComponent.h  SpriteComponent.h
project/src/factory/: ComponentFactory.h
project/src/world/: World.cpp  World.h
